Fixed the text wrap and padding in the footer

--- a/_scss/club/_global.scss
+++ b/_scss/club/_global.scss
@@ -14,6 +14,10 @@ body {
 
   @media (min-width: $md) {
     padding-bottom: 67px;
+
+    &.pb-big {
+      padding-bottom: 120px;
+    }
   }
 }
 
